[package]
name = "anise"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anise"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.44"
regex = "1.5.4"
scraper = "0.12.0"
structopt = "0.3.25"
thiserror = "1.0.30"
ureq = { version = "2.3.0", features = [ "tls" ] }
owo-colors = "3.0.1"
